<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.detail.step_detail.StepDetailFragment">

    <data>

        <variable
            name="step"
            type="com.redridgeapps.baking.model.Step" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/button_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/video_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H, 16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.exoplayer2.ui.PlayerView
                        android:id="@+id/exoplayer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:controller_layout_id="@layout/custom_playback_controls"
                        app:show_timeout="1000" />

                    <ImageView
                        android:id="@+id/thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:error="@{@drawable/recipe_error}"
                        app:imageUrl="@{step.thumbnailURL}"
                        app:placeholder="@{@drawable/recipe_placeholder}"
                        android:visibility="gone" />

                </FrameLayout>

                <TextView
                    android:id="@+id/short_description"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_margin"
                    android:text="@{step.shortDescription}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/video_view"
                    tools:text="Short Description" />

                <TextView
                    android:id="@+id/description"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_margin"
                    android:text="@{step.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/short_description"
                    tools:text="@tools:sample/lorem" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/button_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/previousStep"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_previous"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/nextStep"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_next"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</layout>